Archive2/f2/de6d4ab04162eb/output
main.cpp:4:11: error: cannot assign to a variable captured by copy in a non-mutable lambda
        i = 2;
        ~ ^
1 error generated.
